Instalacni balicky pro Win a Mac

--- a/src/.settings/com.appcelerator.titanium.desktop.prefs
+++ b/src/.settings/com.appcelerator.titanium.desktop.prefs
@@ -1,3 +1,8 @@
-#Fri Nov 11 14:14:04 CET 2011
 DESKTOP_PROJECT_SDK_VERSION=1.1.0
 eclipse.preferences.version=1
+packages/OSX\ 10.5\ Intel/app_page=http\://api.appcelerator.net/p/pages/app_page?token\=h4tG2V43
+packages/OSX\ 10.5\ Intel/app_version=1.0
+packages/OSX\ 10.5\ Intel/label=OSX 10.5 Intel
+packages/OSX\ 10.5\ Intel/platform=osx
+packages/OSX\ 10.5\ Intel/pubdate=2011-11-11 05\:15\:11
+packages/OSX\ 10.5\ Intel/url=http\://api.appcelerator.net/p/v1/download?token\=P4wR7796
